--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
           <li><a href="./index.html" title="">01 : Ana Sayfa</a></li>
           <li><a href="./works.html" title="">02 : Portfolyo</a></li>
           <li><a href="./about.html" title="">03 : Hakkımda</a></li>
-          <li><a href="./contact.html" title="">04 : İletişim</a></li>
+          <li><a href="./contact.html" title="">04 : iletişim</a></li>
           
         </ul>
 
