--- a/works.html
+++ b/works.html
@@ -88,7 +88,7 @@
                         <h4>002/006</h4>
                         <h3>Formula 1 Petronas Mercedes AMG hoodie</h3>
                         <p>custom hoodie design</p>
-                        <a href="./work2.html" title="" class="btn btn-default">İncele</a>
+                        <a href="./formula1mercedes.html" title="" class="btn btn-default">İncele</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
