--- a/works.html
+++ b/works.html
@@ -81,7 +81,7 @@
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="./work2.html" title="" class="black-image-project-hover">
+                      <a href="./formula1mercedes.html" title="" class="black-image-project-hover">
                         <img src="./assets/images/mercedes.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
