Başlık ve Yazılar güncellendi #2

--- a/formula1mercedes.html
+++ b/formula1mercedes.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Portfolyo</title>  
+  <title>Formula 1 Petronas Mercedes AMG Hoodie</title>  
 
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -66,9 +66,9 @@
         <img src="./assets/images/mercededsaq.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">002 : Formula 1 Petronas Mercedes AMG hoodie</h1>
+            <h1 class="h2">002 : Formula 1 Petronas Mercedes AMG Hoodie</h1>
           </div>
-          <p>ercedes AMG Formula 1 takımı için tasarlamış olduğum hoodie.<a href="https://www.linkedin.com/feed/update/urn:li:activity:6907380909419687936/">LİNKEDİN paylaşımım</a></p>
+          <p>Mercedes AMG Formula 1 takımı için tasarlamış olduğum hoodie.<a href="https://www.linkedin.com/feed/update/urn:li:activity:6907380909419687936/">LinkedIn paylaşımım</a></p>
 
           <blockquote>
             <p>Yeni ve canlı tasarımı ile Mercedes görevlilerinin ilgisini çekmiştir.</p>
